--- a/assets/sass/202312product_zakka.scss
+++ b/assets/sass/202312product_zakka.scss
@@ -159,7 +159,8 @@ body, html {
     }
 
     .page2-main,
-    .page1-main{
+    .page1-main,
+    .page1-main-pc{
       clip-path: inset(0 0 0 0);
       opacity: 1;
     }
@@ -224,7 +225,7 @@ body, html {
   transition:clip-path .8s ease 1.3s,opacity 1s ease 1.3s;
   
   @include mq{
-    margin-top: calc(79/1054)*100%;
+    margin-top: 5.495256%;
   }
 }
 
@@ -238,19 +239,20 @@ body, html {
 // }
 
 .heading-txt{
-  @include DNPShueiMinPr6N_M();
-  @include font_size_responsive(22,true);
-  line-height: calc(38/22);
-  -ms-writing-mode: tb-rl;
-  writing-mode: vertical-rl;
+  // @include DNPShueiMinPr6N_M();
+  // @include font_size_responsive(22,true);
+  // line-height: calc(38/22);
+  // -ms-writing-mode: tb-rl;
+  // writing-mode: vertical-rl;
   @include mq{
     margin-right: calc(50/1054)*100%;
+    width: calc(445/1054)*100%;
   }
 }
 
-.heading-txt2{
-  margin-right: calc(49/1054)*100%;
-}
+// .heading-txt2{
+//   margin-right: calc(49/1054)*100%;
+// }
 
 .main-ttl-wrapper{
   
@@ -363,6 +365,8 @@ body, html {
       width: calc(165/1054)*100%;
     }
   }
+
+  
 }
 
 .page1-main{
@@ -383,12 +387,28 @@ body, html {
     padding: 0;
     margin: 0;
     transition:opacity 1s ease .6s,clip-path 1s ease .7s;
+    background: #7eb8cb;
     img{
       width: 100%;
       height: 100vh;
     }
   }
 
+}
+
+.page1-main-pc{
+  width: calc(881/1054)*100%;
+  position: absolute;
+  top: 27.888021%;
+  left: calc(56/1054)*100%;
+  opacity: 0;
+  clip-path: inset(0 0 100% 0);
+  transition:opacity 1s ease .4s,clip-path 1s ease .5s;
+
+  img{
+    width: 100%;
+    height: auto;
+  }
 }
 
 
@@ -527,6 +547,12 @@ body, html {
       width: calc(161/1054)*100%;
     }
   }
+
+  .heading-txt{
+    @include mq{
+      width: 43.220114%;
+    }
+  }
 }
 
 .page2-main{
@@ -558,7 +584,7 @@ body, html {
 }
 
 .yoyaku-ofuda{
-  width: calc(115/$base_w_sp)*100%;
+  width: calc(111/$base_w_sp)*100%;
   position: absolute;
   bottom: calc(53/635)*100%;
   left: calc(40/$base_w_sp)*100%;
@@ -567,7 +593,7 @@ body, html {
   opacity: 0;
   
   @include mq{
-    width: calc(116/1054)*100%;
+    width: calc(107/1054)*100%;
     margin-right: calc(57/1054)*100%;
     position: relative;
     bottom: auto;
